Add h1 tag in about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,5 @@
+<h1>This is About Page!</h1>
+
 My name is sohan. This is my first project of django
 
 <a href="{% url 'home' %}">Go to Home Page!</a>
